[package]
name = "redish"
version = "0.3.1"
edition = "2021"
authors = ["Swapper9 <swapper9@gmail.com>"]
description = "A lightweight in-memory key-value database"
license = "MIT"
readme = "README.md"
repository = "https://github.com/swapper9/redish"
documentation = "https://docs.rs/redish"
homepage = "https://github.com/swapper9/redish"
keywords = ["database", "key-value", "in-memory", "persistence", "indexing"]
categories = ["database", "caching"]

[profile.release]
opt-level = 3             
lto = true
codegen-units = 1
strip = true
#debug = true

[lib]
name = "redish"
path = "src/lib.rs"

[dependencies]
bincode = "2.0.1"
log = "0.4"
log4rs = { version ="1.3.0", features = ["gzip"] }
once_cell = "1.21.3"
rand = "0.9.2"
serial_test = "3.2.0"
crc32fast = "1.5"
lz4 = "1.28"
zstd = "0.13"
snap = "1.1"
chrono = "0.4.41"
growable-bloom-filter = "2.1.1"
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "tree_benchmarks"
harness = false

[[bench]]
name = "serialization_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "compression_benchmarks"
harness = false
